Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\namesection{Debarghya}{Das}{ \urlstyle{same}\url{http://debarghyadas.com} \\
-\href{mailto:dd367@cornell.edu}{dd367@cornell.edu} | 607.379.5733
+\namesection{Sai Srikanth Raju}{Rudraraju}{ 
+\href{mailto:dd367@cornell.edu}{r.saisrikanthraju@gmail.com} | +91 9154-667-667
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -81,73 +81,74 @@
 
 \section{Education} 
 
-\subsection{Cornell University}
-\descript{MEng in Computer Science}
-\location{Expected Dec 2014 | Ithaca, NY \\ Cum. GPA: N/A}
+\subsection{Keshav Memorial Institute of Technology}
+\descript{B.tech in Computer Science}
+\location{Hyderabad \\ CGPA:7.5}
 \sectionsep
 
 
-\descript{BS in Computer Science}
-\location{Expected May 2014 | Ithaca, NY}
-Conc. in Software Engineering \\
-College of Engineering \\
-Dean's List (All Semesters) \\
-\location{ Cum. GPA: 3.92 / 4.0 \\
-Major GPA: 3.94 / 4.0}
-\sectionsep
+\descript{Intermediate}
+\location{ May 2013 | Hyderabad}
+M.P.C \\
+Narayana Junior College \\
 
-\subsection{La Martiniere for Boys}
-\location{Grad. May 2011|  Kolkata, India}
+\location{ Percentage 92}
+\sectionsep
+\descript{SSC}
+\location{ May 2011 | Hyderabad}
+M.P.C \\
+Bhashyam Public School \\
+
+\location{ Percentage 94}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Links} 
-Github:// \href{https://github.com/deedydas}{\custombold{deedydas}} \\
-LinkedIn://  \href{https://www.linkedin.com/in/debarghyadas}{\custombold{debarghyadas}} \\
-YouTube://  \href{https://www.youtube.com/user/DeedyDash007}{\custombold{DeedyDash007}} \\
-Twitter://  \href{https://twitter.com/debarghya_das}{\custombold{@debarghya\_das}} \\
-Quora://  \href{https://www.quora.com/Debarghya-Das}{\custombold{Debarghya-Das}}
-\sectionsep
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     COURSEWORK
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Coursework}
-\subsection{Graduate}
-Advanced Machine Learning \\
-Open Source Software Engineering \\
-Advanced Interactive Graphics \\
-Compilers + Practicum \\
+\subsection{UNDERGRADUATE:1-4 sem.}
+Computer Language \\
+Digital Logic Design \\
+Data Structures \\
+Compiler Design \\
 Cloud Computing \\
+D.B.M.S\\
 \sectionsep
 
-\subsection{Undergraduate}
+\subsection{Undergraduate:4-8 sem.}
 Information Retrieval \\
 Operating Systems \\
-Artificial Intelligence + Practicum \\
-Functional Programming \\
-Computer Graphics + Practicum \\
-{\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst) }}} \\
-Unix Tools and Scripting \\
+Embedded Systems\\
+Linux Programming \\
+Big Data Analytics \\
+Software Engineering\\
+
+Web Technologies\\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Skills}
+\section{technical Skills}
 \subsection{Programming}
 \location{Over 5000 lines:}
-Java \textbullet{}   Shell \textbullet{} JavaScript \textbullet{} Matlab \\
-OCaml \textbullet{} Python \textbullet{} Rails \textbullet{} \LaTeX\ \\ 
+Java \textbullet{}   C \textbullet{} mySQL \textbullet{} HTML \\
+ Python \textbullet{} JavaScript.  \\ 
+ \sectionsep
 \location{Over 1000 lines:}
-C \textbullet{} C++ \textbullet{} CSS \textbullet{} PHP \textbullet{} Assembly \\
+Bootstrap \textbullet{} R \textbullet{} CSS \textbullet{} php\\
+OpenCV \\
+\sectionsep
 \location{Familiar:}
-AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
+selenium tool.    \\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -164,83 +165,91 @@ AS3 \textbullet{} iOS \textbullet{} Android \textbullet{} MySQL
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Experience}
+\section{PROJECTS}
 
-\runsubsection{Coursera}
-\descript{| KPCB Fellow + Software Engineering Intern }
-\location{Expected June 2014 – Sep 2014 | Mountain View, CA}
+\runsubsection{sentiment analysis}
+\descript{| Major Project }
+
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item 52 out of 2500 applicants chosen to be a KPCB Fellow 2014.
+\item The Twitter data is fetched using spring-xd Server, which is stored in HDFS. 
+This is fed to the Sentiment Analysis engine built using python.  This generated score is then fed to the visualization framework which builds using JavaScript to create meaningful charts.
+\item  Lexicon based approach is used to calculate the sentiments of the tweets and score is generated for each tweet.
+\item  This generated score is then fed to the visualization framework which builds using JavaScript to create meaningful charts.
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Google}
-\descript{| Software Engineering Intern }
-\location{May 2013 – Aug 2013 | Mountain View, CA}
+\runsubsection{easySRT}
+\descript{| Mini Project }
+
 \begin{tightemize}
-\item Worked on the YouTube Captions team in primarily vanilla Javascript and Python to plan, design and develop the full stack implementation of a new framework to add and edit Automatic Speech Recognition captions.
-\item Created a backbone.js-like framework for the Captions editor.
-\item All code was reviewed, perfected, and pushed to production.
+\item  I have developed a python application which crawls the web and obtains subtitles for the user desired movie by automatically fetching it with just two clicks, making the work of the user easy.
+
+
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Phabricator}
-\descript{| Open Source Contributor \& Team Leader}
-\location{Jan 2013 – May 2013 | Palo Alto, CA \& Ithaca, NY}
+\runsubsection{ATTENDANCE registrar}
+\descript{| computer vision}
+
 \begin{tightemize}
-\item Phabricator is used daily by Facebook, Dropbox, Quora, Asana and more.
-\item I created the Meme generator, the entire Lipsum application, ported Tokens to different apps, fixed many bugs and more in PHP and Shell.
-\item Led a team from MIT, Cornell, IC London and UHelsinki for the project.
+\item I have developed an application which uses computer vision (OpenCV) to record the attendance of students.
+\item A model gets constructed based on the input images of the students. 
+\item This model recognizes the student when he stands in front of the camera and marks down his attendance.
 \end{tightemize}
 \sectionsep
+\sectionsep
+
+\runsubsection{website}
+
+
+\begin{tightemize}
+\item I have developed a personal website for a neurosurgeon using HTML, CSS, JavaScript and Bootstrap. 
+\item I have portrayed his skills and research work, portfolio, credentials and personal information.
+
+
+
+\end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     RESEARCH
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Research}
-\runsubsection{Cornell Robot Learning Lab}
-\descript{| Head Undergrad Research}
-\location{Jan 2014 – Present | Ithaca, NY}
-Worked with \textbf{\href{http://www.cs.cornell.edu/~ashesh/}{Ashesh Jain}} and \textbf{\href{http://www.cs.cornell.edu/~asaxena/}{Prof Ashutosh Saxena}} to create \textbf{PlanIt}, a tool which  learns from large scale user preference feedback to plan robot trajectories in human environments.  Publication submitted.
-\sectionsep
+\section{}
 
-\runsubsection{Cornell Phonetics Lab}
-\descript{| Head Undergraduate Researcher}
-\location{Mar 2012 – May 2013 | Ithaca, NY}
-Lead the development of \textbf{QuickTongue}, the first ever breakthrough tongue-controlled game with \textbf{\href{http://conf.ling.cornell.edu/~tilsen/}{Prof Sam Tilsen}} to aid in Linguistics research. Publication submitted.
-\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Awards} 
-\begin{tabular}{rll}
-2014	     & top 52/2500  & KPCB Engineering Fellow\\
-2014	     & 2\textsuperscript{nd} most points  & Google Code Jam, Qualification Round\\
-2014	     & 1\textsuperscript{st}/50  & Microsoft Coding Competition, Cornell\\
-2013	     & National  & Jump Trading Challenge Finalist\\
-2013     & 7\textsuperscript{th}/120 & CS 3410 Cache Race Bot Tournament  \\
-2012     & 2\textsuperscript{nd}/150 & CS 3110 Biannual Intra-Class Bot Tournament \\
-2011     & National & Indian National Mathematics Olympiad (INMO) Finalist \\
-2010     & National & Comp. Soc. of India's National Programming Contest\\
-\end{tabular}
+\section{strengths} 
+\sectionsep
+
+\begin{tightemize}
+\item Ability to work in team as well as individual.
+\item Getting things done. 
+
+
+
+\end{tightemize}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SOCIETIES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Societies} 
+\section{Hobbies} 
+\sectionsep
 
-\begin{tabular}{rll}
-2014 	& top 12\%ile    & Tau Beta Pi Engineering Honor Society\\
-2014   & National   & The Global Leadership and Education Forum (tGELF)\\
-2012   &  National  & Golden Key International Honor Society\\
-2012   &  National   & National Society of Collegiate Scholars\\
-\end{tabular}
+\begin{tightemize}
+\item Internet saavy.
+\item Read novels.
+\item Learning about technological advancements. 
+\item Weekend drives. 
+
+
+
+\end{tightemize}
 \sectionsep
 
 \end{minipage} 
