--- a/main.tex
+++ b/main.tex
@@ -80,10 +80,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Education} 
-
-\subsection{Keshav Memorial Institute of Technology}
-\descript{B.tech in Computer Science}
-\location{Hyderabad \\ CGPA:7.5}
+\subsection{}
+\descript{B.tech in Computer Science\\and Engineering}
+\location{Keshav Memorial Institute of Technology \\ CGPA:7.5}
 \sectionsep
 
 
@@ -166,12 +165,14 @@ selenium tool.    \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{PROJECTS}
-
+\sectionsep
+\sectionsep
 \runsubsection{sentiment analysis}
 \descript{| Major Project }
 
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
+\sectionsep
 \item The Twitter data is fetched using spring-xd Server, which is stored in HDFS. 
 This is fed to the Sentiment Analysis engine built using python.  This generated score is then fed to the visualization framework which builds using JavaScript to create meaningful charts.
 \item  Lexicon based approach is used to calculate the sentiments of the tweets and score is generated for each tweet.
@@ -181,7 +182,7 @@ This is fed to the Sentiment Analysis engine built using python.  This generated
 
 \runsubsection{easySRT}
 \descript{| Mini Project }
-
+\sectionsep
 \begin{tightemize}
 \item  I have developed a python application which crawls the web and obtains subtitles for the user desired movie by automatically fetching it with just two clicks, making the work of the user easy.
 
@@ -191,7 +192,7 @@ This is fed to the Sentiment Analysis engine built using python.  This generated
 
 \runsubsection{ATTENDANCE registrar}
 \descript{| computer vision}
-
+\sectionsep
 \begin{tightemize}
 \item I have developed an application which uses computer vision (OpenCV) to record the attendance of students.
 \item A model gets constructed based on the input images of the students. 
@@ -216,8 +217,6 @@ This is fed to the Sentiment Analysis engine built using python.  This generated
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{}
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
